animated start chat button, fixed z-index

--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -31,11 +31,15 @@
     border-radius: 12px;
     margin-top: 5rem !important;
     animation-name: wiggle;
+    animation-duration: 2s;
     animation-iteration-count: infinite;
+}
+.zima__header--action:hover{
+    animation: none;
 }
 @keyframes wiggle{
     0%{
-        transform: rotate(2deg);
+        transform: rotate(0deg);
        }
        20%{
         transform: rotate(-5deg);
@@ -44,10 +48,10 @@
         transform: rotate(5deg);
        }
        60%{
-        transform: rotate(-10deg);
+        transform: rotate(-5deg);
        }
        80%{
-        transform: rotate(10deg);
+        transform: rotate(5deg);
        }
        100%{
         transform: rotate(-2deg);
@@ -56,7 +60,7 @@
 
 @-ms-keyframes wiggle{
     0%{
-     transform: rotate(2deg);
+     transform: rotate(0deg);
     }
     20%{
      transform: rotate(-5deg);
@@ -68,10 +72,10 @@
      transform: rotate(-10deg);
     }
     80%{
-     transform: rotate(10deg);
+     transform: rotate(5deg);
     }
     100%{
-     transform: rotate(-2deg);
+     transform: rotate(-5deg);
     }
 }
 
@@ -87,6 +91,12 @@
         width: 100%;
         height: 50vh;
         color: var(--color-btn);
+    }
+    .Zima__quote span{
+        margin: 0.2rem !important;
+    }
+    .Zima__quote span:last-of-type{
+        margin-top: 3rem !important;
     }
     .zima__header-img{
         display: none;
